mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_access_undefined_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_access_undefined_field.mux`
error: Unknown field 'undefined_field' on type C
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_access_undefined_field.mux:6:10
   |
 6 | auto y = c.undefined_field
   |          ^
